--- a/UAV-IQ-Marketing/app/scss/comoponets/droneOperatos.scss
+++ b/UAV-IQ-Marketing/app/scss/comoponets/droneOperatos.scss
@@ -37,7 +37,7 @@
         }
 
         h1{
-          font-size: 50px;
+          font-weight:bold;
           text-align: center;
 
           @media only screen and (max-device-width: 1024px) {
