--- a/UAV-IQ-Marketing/app/scss/comoponets/wineflight.scss
+++ b/UAV-IQ-Marketing/app/scss/comoponets/wineflight.scss
@@ -38,7 +38,7 @@
         }
 
         h1{
-          font-size: 70px;
+          font-size: 65px;
           text-align: center;
           font-weight: bold;
 
@@ -48,8 +48,9 @@
         }
 
         p{
+          font-size: 23px;
           text-align: center;
-          font-size: 20px;
+          padding: 0 15%;
         }
 
         .button{
