--- a/UAV-IQ-Marketing/app/scss/comoponets/ourProducts.scss
+++ b/UAV-IQ-Marketing/app/scss/comoponets/ourProducts.scss
@@ -27,6 +27,16 @@
       .container{
         color:#FFF;
 
+        .subcontainer{
+          padding: 0 25px;
+
+          @media only screen and (min-device-width: 1025px) {
+            position: absolute;
+            top: 30%;
+            transform: translateY(30%);
+          }
+        }
+
         .image-container{
           width: 100%;
           img{
@@ -38,8 +48,8 @@
         }
 
         h1{
-          font-size: 50px;
-          text-align: center;
+          font-size: 70px;
+          font-weight:bold;
 
           @media only screen and (max-device-width: 1024px) {
             font-size: 60px !important;
@@ -48,7 +58,6 @@
 
         p{
           font-size: 36px;
-          text-align: center;
         }
 
         .button{
@@ -73,6 +82,17 @@
         }
 
         .banner{
+          width:100%;
+        }
+      }
+
+      .image{
+
+        .subcontainer{
+          padding: 0 25px;
+        }
+
+        img{
           width:100%;
         }
       }
