--- a/UAV-IQ-Marketing/app/css/main.css
+++ b/UAV-IQ-Marketing/app/css/main.css
@@ -1,6 +1,17 @@
 button {
   -webkit-appearance: none; }
 
+* {
+  -webkit-transition: all .3s;
+  /* Safari */
+  -moz-transition: all .3s;
+  /*Firefox*/
+  -ms-transition: all .3s;
+  /*IE10+*/
+  -o-transition: all .3s;
+  /*Opera*/
+  transition: all .3s; }
+
 .home {
   font-family: 'Raleway', sans-serif; }
   .home .jumbotron {
@@ -381,89 +392,93 @@ nav {
       height: 130px; }
     nav .stack {
       height: 160px !important; } }
-  nav .nav .nav-item a {
-    color: #FFF;
-    padding-top: 45px;
-    padding-bottom: 45px; }
-    nav .nav .nav-item a:hover {
-      color: #A3CB00;
-      background-color: #FFF; }
-  nav .nav .nav-item ul {
-    list-style: none;
-    padding: 0;
-    position: absolute;
-    left: 0;
-    top: 70px;
-    height: 0;
-    overflow: hidden; }
-    nav .nav .nav-item ul li {
-      margin: 0;
-      display: block;
-      width: 100%;
-      height: auto;
+  nav .nav {
+    border: none; }
+    nav .nav .nav-item a {
       color: #FFF;
-      z-index: 999; }
-      nav .nav .nav-item ul li a {
-        display: block;
-        padding: 5px 40px;
-        white-space: nowrap;
+      padding-top: 45px;
+      padding-bottom: 45px; }
+      nav .nav .nav-item a:hover {
         color: #A3CB00;
         background-color: #FFF; }
-      nav .nav .nav-item ul li:hover a {
-        color: #FFF !important;
-        background-color: #A3CB00; }
-  nav .nav .nav-item .nav-active {
-    z-index: 99;
-    margin-top: 48px; }
-    nav .nav .nav-item .nav-active li {
-      padding: 30px 40px;
-      border-bottom: 2px solid #A3CB00; }
-      nav .nav .nav-item .nav-active li:hover a {
-        color: #A3CB00 !important;
-        background-color: #FFF; }
-  @media screen and (min-width: 768px) {
-    nav .nav .nav-item:hover ul {
-      height: auto;
-      width: 100%; } }
-  @media only screen and (max-device-width: 1024px) {
-    nav .nav {
-      background-color: #fff;
+    nav .nav .nav-item ul {
+      list-style: none;
+      padding: 0;
       position: absolute;
-      width: 100%;
-      top: 210px;
-      left: 0; }
-      nav .nav .nav-item {
-        clear: both;
+      left: 0;
+      top: 70px;
+      height: 0;
+      overflow: hidden; }
+      nav .nav .nav-item ul li {
+        margin: 0;
+        display: block;
         width: 100%;
+        height: auto;
+        color: #FFF;
+        z-index: 999; }
+        nav .nav .nav-item ul li a {
+          display: block;
+          padding: 5px 40px;
+          white-space: nowrap;
+          color: #A3CB00;
+          background-color: #FFF; }
+        nav .nav .nav-item ul li:hover a {
+          color: #FFF !important;
+          background-color: #A3CB00; }
+    nav .nav .nav-item .nav-active {
+      z-index: 99;
+      margin-top: 48px; }
+      nav .nav .nav-item .nav-active li {
+        padding: 30px 40px;
         border-bottom: 2px solid #A3CB00; }
-        nav .nav .nav-item a {
-          color: #000;
-          font-size: 17px;
-          display: inline;
-          padding: 0 !important; }
-        nav .nav .nav-item:last-child {
-          border: none; } }
-  @media only screen and (max-device-width: 768px) {
-    nav .nav {
-      background-color: #fff;
-      position: absolute;
-      width: 100%;
-      top: 210px;
-      left: 0; }
-      nav .nav .nav-item {
-        clear: both;
-        width: 100%; }
-        nav .nav .nav-item a {
-          color: #000;
-          padding: 30px 20px;
-          font-size: 30px; } }
+        nav .nav .nav-item .nav-active li:hover a {
+          color: #A3CB00 !important;
+          background-color: #FFF; }
+    @media screen and (min-width: 768px) {
+      nav .nav .nav-item:hover ul {
+        height: auto;
+        width: 100%; } }
+    @media only screen and (max-device-width: 1024px) {
+      nav .nav {
+        background-color: #fff;
+        position: absolute;
+        width: 100%;
+        bottom: 0;
+        transform: translateY(100%);
+        left: 0; }
+        nav .nav .nav-item {
+          clear: both;
+          width: 100%;
+          border-bottom: 2px solid #A3CB00; }
+          nav .nav .nav-item a {
+            color: #000;
+            font-size: 17px;
+            display: inline;
+            padding: 0 !important; }
+          nav .nav .nav-item:last-child {
+            border: none; } }
+    @media only screen and (max-device-width: 768px) {
+      nav .nav {
+        background-color: #fff;
+        position: absolute;
+        width: 100%;
+        bottom: 0;
+        transform: translateY(100%);
+        left: 0; }
+        nav .nav .nav-item {
+          clear: both;
+          width: 100%; }
+          nav .nav .nav-item a {
+            color: #000;
+            padding: 30px 20px;
+            font-size: 30px; } }
   nav .stack {
     display: none; }
   @media screen and (max-device-width: 1024px) {
     nav .stack {
       display: block;
       position: absolute;
-      bottom: 2px;
+      bottom: 0;
       right: 0;
       height: 110px;
       width: 100px;
@@ -527,10 +542,13 @@ nav {
   -webkit-box-shadow: 0px 6px 16px -5px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px 6px 16px -5px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 6px 16px -5px rgba(0, 0, 0, 0.75); }
-  .changeHeader .nav-item a {
-    color: #7F5E3B !important;
-    padding-top: 45px;
-    padding-bottom: 45px; }
+  @media screen and (min-device-width: 1025px) {
+    .changeHeader .navbar-brand img {
+      height: 40px; }
+    .changeHeader .nav-item a {
+      color: #7F5E3B !important;
+      padding-top: 25px !important;
+      padding-bottom: 25px !important; } }
 
 .displayNone {
   display: none; }
