--- a/UAV-IQ-Marketing/app/scss/main.scss
+++ b/UAV-IQ-Marketing/app/scss/main.scss
@@ -2,6 +2,14 @@ button{
   -webkit-appearance:none
 }
 
+*{
+  -webkit-transition: all .3s;/* Safari */
+  -moz-transition: all .3s;/*Firefox*/
+  -ms-transition: all .3s;/*IE10+*/
+  -o-transition: all .3s;/*Opera*/
+  transition: all .3s;
+}
+
 .home{
   font-family: 'Raleway', sans-serif;
 
@@ -631,6 +639,7 @@ button{
     }
 
     .nav{
+      border:none;
       .nav-item{
         a{
           color:#FFF;
@@ -707,7 +716,8 @@ button{
         background-color: #fff;
         position: absolute;
         width: 100%;
-        top: 210px;
+        bottom: 0;
+        transform: translateY(100%);
         left: 0;
 
         .nav-item{
@@ -731,7 +741,8 @@ button{
         background-color: #fff;
         position: absolute;
         width: 100%;
-        top: 210px;
+        bottom: 0;
+        transform: translateY(100%);
         left: 0;
 
         .nav-item{
@@ -754,7 +765,7 @@ button{
       .stack{
         display: block;
         position: absolute;
-        bottom: 2px;
+        bottom: 0;
         right:0;
         height: 110px;
         width: 100px;
@@ -829,13 +840,21 @@ button{
     -moz-box-shadow: 0px 6px 16px -5px rgba(0,0,0,0.75);
     box-shadow: 0px 6px 16px -5px rgba(0,0,0,0.75);
 
-    .nav-item{
-      a{
-        color:#7F5E3B !important;
-        padding-top: 45px;
-        padding-bottom: 45px;
+
+    @media screen and (min-device-width: 1025px) {
+      .navbar-brand{
+        img{
+          height: 40px;
+        }
       }
 
+      .nav-item{
+        a{
+          color:#7F5E3B !important;
+          padding-top: 25px !important;
+          padding-bottom: 25px !important;
+        }
+      }
     }
   }
 
