--- a/UAV-IQ-Marketing/app/scss/comoponets/datacollection.scss
+++ b/UAV-IQ-Marketing/app/scss/comoponets/datacollection.scss
@@ -17,7 +17,7 @@
       }
 
       @media only screen and (max-device-width: 1024px) {
-        background-size: 145%;
+        background-size: 155%;
       }
 
       .container{
@@ -38,9 +38,13 @@
         }
 
         p{
-          font-size: 23px;
           text-align: center;
           padding: 0 15%;
+          font-size: 25px;
+
+          @media only screen and (max-device-width: 1024px) {
+            font-size: 30px !important;
+          }
         }
 
         .button{
