--- a/UAV-IQ-Marketing/app/scss/comoponets/droneOperatos.scss
+++ b/UAV-IQ-Marketing/app/scss/comoponets/droneOperatos.scss
@@ -46,8 +46,12 @@
         }
 
         p{
-          font-size: 36px;
           text-align: center;
+          font-size: 25px;
+
+          @media only screen and (max-device-width: 1024px) {
+            font-size: 30px !important;
+          }
         }
 
         .button{
