--- a/UAV-IQ-Marketing/app/scss/comoponets/ourProducts.scss
+++ b/UAV-IQ-Marketing/app/scss/comoponets/ourProducts.scss
@@ -57,7 +57,11 @@
         }
 
         p{
-          font-size: 36px;
+          font-size: 25px;
+
+          @media only screen and (max-device-width: 1024px) {
+            font-size: 30px !important;
+          }
         }
 
         .button{
@@ -158,6 +162,15 @@
 
           @media only screen and (max-device-width: 768px) {
             font-size: 45px;
+          }
+        }
+
+        h3{
+          font-size: 28px;
+          text-align: center;
+
+          @media only screen and (max-device-width: 768px) {
+            font-size: 43px;
           }
         }
 
