--- a/UAV-IQ-Marketing/app/scss/main.scss
+++ b/UAV-IQ-Marketing/app/scss/main.scss
@@ -645,11 +645,11 @@ button{
     .nav{
       border:none;
       .nav-item{
+        padding-top: 30px;
+        padding-bottom: 30px;
         a{
           color:#FFF;
-          padding-top: 45px;
-          padding-bottom: 45px;
-
+          border-radius:5px;
           &:hover{
             color:#A3CB00;
             background-color:#FFF;
@@ -678,6 +678,9 @@ button{
               white-space:nowrap;
               color:#A3CB00;
               background-color:#FFF;
+              border-radius: 0px;
+              padding-top: 25px !important;
+              padding-bottom: 25px !important;
             }
 
             &:hover{
@@ -844,6 +847,12 @@ button{
     -moz-box-shadow: 0px 6px 16px -5px rgba(0,0,0,0.75);
     box-shadow: 0px 6px 16px -5px rgba(0,0,0,0.75);
 
+    .nav{
+      .nav-item{
+        padding-top: 0px;
+        padding-bottom: 0px;
+      }
+    }
 
     @media screen and (min-device-width: 1025px) {
       .navbar-brand{
