--- a/UAV-IQ-Marketing/app/scss/comoponets/datacollection.scss
+++ b/UAV-IQ-Marketing/app/scss/comoponets/datacollection.scss
@@ -53,9 +53,9 @@
           .btn{
             background-color:#A3CB00;
             border: none;
-            border-radius:0;
+            border-radius: 3px;
             padding: 10px 35px;
-            font-size: 30px;
+            font-size: 18px;
 
             @media only screen and (max-device-width: 1024px) {
               font-size: 45px;
@@ -143,7 +143,7 @@
           .btn{
             background-color:#A3CB00;
             border: none;
-            border-radius:0;
+            border-radius: 3px;
             padding: 10px 35px;
             font-size: 25px;
 
@@ -319,7 +319,7 @@
         .btn{
           background-color:#A3CB00;
           border: none;
-          border-radius:0;
+          border-radius: 3px;
           padding: 10px 35px;
           text-decoration: none;
           color:#FFF;
@@ -370,7 +370,7 @@
           font-size: 35px;
           background-color:#A3CB00;
           border: none;
-          border-radius:0;
+          border-radius: 3px;
           padding: 10px 35px;
           font-size: 45px;
 
