--- a/UAV-IQ-Marketing/app/scss/comoponets/instafarm.scss
+++ b/UAV-IQ-Marketing/app/scss/comoponets/instafarm.scss
@@ -67,9 +67,9 @@
           .btn{
             background-color:#A3CB00;
             border: none;
-            border-radius:0;
+            border-radius: 3px;
             padding: 10px 35px;
-            font-size: 20px;
+            font-size: 18px;
 
             @media only screen and (max-device-width: 768px) {
               font-size: 45px;
@@ -80,8 +80,8 @@
             display: block;
             font-size:11px;
 
-            @media only screen and (max-device-width: 1024px) {
-              font-size:20px;
+            @media only screen and (min-device-width: 1024px) {
+              font-size:15px;
             }
           }
         }
@@ -678,7 +678,7 @@
           font-size: 35px;
           background-color:#A3CB00;
           border: none;
-          border-radius:0;
+          border-radius: 3px;
           padding: 10px 35px;
 
           @media only screen and (min-device-width: 1024px) {
