--- a/UAV-IQ-Marketing/app/scss/comoponets/ourProducts.scss
+++ b/UAV-IQ-Marketing/app/scss/comoponets/ourProducts.scss
@@ -71,9 +71,9 @@
           .btn{
             background-color:#A3CB00;
             border: none;
-            border-radius:0;
+            border-radius: 3px;
             padding: 10px 35px;
-            font-size: 30px;
+            font-size: 18px;
 
           }
 
@@ -214,7 +214,7 @@
         .btn{
           background-color:#A3CB00;
           border: none;
-          border-radius:0;
+          border-radius: 3px;
           padding: 10px 35px;
           font-size: 15px;
         }
@@ -734,7 +734,7 @@
           font-size: 35px;
           background-color:#A3CB00;
           border: none;
-          border-radius:0;
+          border-radius: 3px;
           padding: 10px 35px;
 
           @media only screen and (min-device-width: 1024px) {
