--- a/UAV-IQ-Marketing/app/scss/main.scss
+++ b/UAV-IQ-Marketing/app/scss/main.scss
@@ -56,7 +56,7 @@ button{
         .btn{
           background-color:#A3CB00;
           border: none;
-          border-radius:0;
+          border-radius: 3px;
           padding: 10px 35px;
         }
 
@@ -426,7 +426,7 @@ button{
           .btn{
             background-color:#A3CB00;
             border: none;
-            border-radius:0;
+            border-radius: 3px;
             padding: 10px 35px;
             font-size: 35px;
           }
@@ -614,6 +614,7 @@ button{
         background-color:#A3CB00;
         border:none;
         color: #FFF;
+        border-radius: 3px;
       }
 
       @media only screen and (max-device-width: 768px) {
@@ -672,6 +673,12 @@ button{
             height: auto;
             color:#FFF;
             z-index:999;
+
+            &:last-child{
+              a{
+                border-radius: 0 0 5px 5px;
+              }
+            }
 
             a{
               display: block;
