--- a/UAV-IQ-Marketing/app/scss/comoponets/datacollection.scss
+++ b/UAV-IQ-Marketing/app/scss/comoponets/datacollection.scss
@@ -11,6 +11,7 @@
       background-color:#000;
       max-height: 800px;
       overflow: hidden;
+      background-size: 115%;
 
       @media only screen and (min-device-width: 1024px) {
         min-height: 550px;
